# valid_length

./: Makefile  README.md  pyproject.toml
test/: test-validator.py  test_validator.py
tests/: test_validator_it.py  test_validator_ut.py
validator/: __init__.py  main.py
